--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <table>
     <thead>
-        <th>
-            Participante
-        </th>
+        <tr>
+            <th>
+                Participante
+            </th>
+            <th>Data da inscrição</th>
+        </tr>
+        
     </thead>
 </table>
