--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <table>
     <thead>
         <tr>
-            <th>
-                Participante
-            </th>
+            <th>Participante</th>
             <th>Data da inscrição</th>
+            <th>Data do chekin</th>
         </tr>
         
     </thead>
