--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<table>
+<table width="100%">
     <thead>
         <tr>
             <th>Participante</th>
             <th>Data da inscrição</th>
-            <th>Data do chekin</th>
+            <th>Data do check-in</th>
         </tr>
     </thead>
 </table>
