--- a/index.html
+++ b/index.html
@@ -6,4 +6,11 @@
             <th>Data do check-in</th>
         </tr>
     </thead>
+    <tbody>
+        <tr>
+            <td>Diego Fernandes</td>
+            <td>há 3 dias </td>
+            <td>há 3 minutos</td>
+        </tr>
+    </tbody>
 </table>
