--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </thead>
     <tbody>
         <tr>
-            <td><strong>Diego Fernandes</strong></td>
+            <td><strong>Diego Fernandes</strong><br></td>
             <td>há 3 dias </td>
             <td>há 3 minutos</td>
         </tr>
