--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
-<table width="100%">
-    <thead>
-        <tr>
-            <th>Participante</th>
-            <th>Data da inscrição</th>
-            <th>Data do check-in</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td><strong>Diego Fernandes</strong><br></td>
-            <td>há 3 dias </td>
-            <td>há 3 minutos</td>
-        </tr>
-    </tbody>
-</table>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
+
