--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
     <table width="100%">
-        <thead>
+        <thead style="text-align: left;">
             <tr>
                 <th>Participante</th>
                 <th>Data da inscrição</th>
