--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <th>Data do check-in</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody class="tbody">
             <tr>
                 <td><strong>Diego Fernandes</strong><br><small>diego@gmail.com</small></td>
                 <td>há 3 dias </td>
@@ -23,6 +23,7 @@
             </tr>
         </tbody>
     </table>    
+    <script href="main.js"></script>
 </body>
 </html>
 
