--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <th>Data do check-in</th>
             </tr>
         </thead>
-        <tbody class="tbody">
+        <tbody>
             <tr>
                 <td><strong>Diego Fernandes</strong><br><small>diego@gmail.com</small></td>
                 <td>há 3 dias </td>
