--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         </thead>
         <tbody>
             <tr>
-                <td><strong>Diego Fernandes</strong><br><small>diego@gmail.com</small></td>
+                <td><strong>Diego Fernandes</strong><br>
+                    <small>diego@gmail.com</small></td>
                 <td>há 3 dias </td>
                 <td>há 3 minutos</td>
             </tr>
