--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <tbody>
             <tr>
                 <td>
-                    <strong>Diego Fernandes</strong><br>
+                    <strong>Diego Fernandes</strong>
+                    <br>
                     <small>diego@gmail.com</small></td>
                 <td>há 3 dias </td>
                 <td>há 3 minutos</td>
