--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </tr>
         </tbody>
     </table>    
-    <script href="main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
 
