--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         </tbody>
     </table>    
     <script src="main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
 </body>
 </html>
 
