--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js" defer></script>
 <script src="https://cdn.jsdelivr.net/npm/dayjs@1/plugin/utc.js" defer></script>
-<script defer>dayjs.extend(window.dayjs_plugin_utc)</script>
+<script >dayjs.extend(window.dayjs_plugin_utc)</script>
 </body>
 </html>
 
