--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     </table>    
     <script src="main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js" defer></script>
-<script src="https://cdn.jsdelivr.net/npm/dayjs@1/plugin/utc.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js" ></script>
+<script src="https://cdn.jsdelivr.net/npm/dayjs@1/plugin/utc.js" ></script>
 <script >dayjs.extend(window.dayjs_plugin_utc)</script>
 </body>
 </html>
