--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </tbody>
     </table>    
     <script src="main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js" ></script>
 <script src="https://cdn.jsdelivr.net/npm/dayjs@1/plugin/utc.js" ></script>
 <script >dayjs.extend(window.dayjs_plugin_utc)</script>
