--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js" ></script>
 <script src="https://cdn.jsdelivr.net/npm/dayjs@1/locale/pt-br.js" ></script>
-<script >dayjs.extend(window.dayjs_plugin_utc)</script>
+<script >dayjs.locale('pt-br')</script>
 </body>
 </html>
 
