--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 <script >
 dayjs.locale('pt-br')
 </script>
+<script type="text/javascript" src="./main.js" defer=""></script>
 
 </body>
 </html>
