--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-
+<form ></form>
     <table width="100%">
         <thead style="text-align: left;">
             <tr>
