--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-<form ></form>
+<form >
+    <legend>
+        
+    </legend>
+</form>
     <table width="100%">
         <thead style="text-align: left;">
             <tr>
