--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
 <form >
     <legend>
-        
+        Inscrição
+        <div>
+            <input type="text">
+        </div>
     </legend>
 </form>
     <table width="100%">
