--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <legend>
         Inscrição
         <div>
-            <input type="text">
+            <input type="text"
+            placeholder="Nome Completo"
+            name="nome"
+            >
+            
+            
         </div>
     </legend>
 </form>
