--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
             placeholder="Nome Completo"
             name="nome"
             >
-            
+            <input type="email"
+            placeholder="Email"
+            name="email">
             
         </div>
     </legend>
