--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             <input type="email"
             placeholder="Email"
             name="email">
+            <button>
+                REALIZAR INSCRIÇÃO
+            </button>
             
         </div>
     </legend>
