--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-<form >
+<form  onsubmit> <!-- quando focar com botao ou mouse ,responder e enviar informarções -->
     <legend>
         Inscrição
         <div>
