--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
             <input type="text"
             placeholder="Nome Completo"
             name="nome"
+
+            required
+            
             >
             <input type="email"
             placeholder="Email"
-            name="email">
+            name="email"
+            required
+            >
             <button>
                 REALIZAR INSCRIÇÃO
             </button>
