--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-<form  onsubmit ="adicionarParticipante(event)"> <!-- quando focar com botao ou mouse ,responder e enviar informarções -->
+<form  onsubmit ="adicionarParticipante(event)"> <!-- quando clicar em realizar inscrição,responder e enviar informarções -->
     <fieldset>
         <legend>
             Inscrição
