--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <legend>
             Inscrição
             <div>
-                
+                <div class="input-wrapper"></div>
                 <input type="text"
                 placeholder="Nome Completo"
                 name="nome"
