--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <fieldset>
         <legend>
             Inscrição
-            <div>
+            <div> <!-- criar uma div com classe basta escrever div.input-wrapper ( nesse caso)-->
                 <div class="input-wrapper"></div>
                 <input type="text"
                 placeholder="Nome Completo"
