--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <legend>
             Inscrição
             <div> <!-- criar uma div com classe basta escrever div.input-wrapper ( nesse caso)-->
-                <div class="input-wrapper"></div>
+                <div class="input-wrapper">
                 <input type="text"
                 placeholder="Nome Completo"
                 name="nome"
