--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 name="nome"
                 required
                 >
+                </div>
                 <input type="email"
                 placeholder="Email"
                 name="email"
