--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 required
                 >
                 </div>
+                <div class="input-wrapper">
                 <input type="email"
                 placeholder="Email"
                 name="email"
