--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         
                 required
                 >
+            </div>
                 <button>
                     REALIZAR INSCRIÇÃO
                 </button>
