--- a/index.html
+++ b/index.html
@@ -34,6 +34,21 @@
                 Inscrição
                 <div> <!-- criar uma div com classe basta escrever div.input-wrapper ( nesse caso)-->
                     <div class="input-wrapper">
+                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#clip0_24_691)">
+                              <path
+                                d="M7.99999 10.6666C9.47275 10.6666 10.6667 9.47274 10.6667 7.99998C10.6667 6.52722 9.47275 5.33331 7.99999 5.33331C6.52724 5.33331 5.33333 6.52722 5.33333 7.99998C5.33333 9.47274 6.52724 10.6666 7.99999 10.6666Z"
+                                stroke="#9FF9CC" stroke-width="1.33333" stroke-linecap="round" stroke-linejoin="round" />
+                              <path
+                                d="M10.6667 5.33332V8.66665C10.6667 9.19708 10.8774 9.70579 11.2524 10.0809C11.6275 10.4559 12.1362 10.6667 12.6667 10.6667C13.1971 10.6667 13.7058 10.4559 14.0809 10.0809C14.4559 9.70579 14.6667 9.19708 14.6667 8.66665V7.99998C14.6667 6.49819 14.1596 5.04038 13.2276 3.86276C12.2956 2.68514 10.9933 1.8567 9.53168 1.51166C8.07006 1.16662 6.53475 1.32519 5.17451 1.96169C3.81426 2.59818 2.70877 3.67531 2.03715 5.01856C1.36552 6.36181 1.16711 7.89248 1.47406 9.36257C1.78101 10.8327 2.57534 12.1561 3.72835 13.1183C4.88135 14.0806 6.32549 14.6254 7.82678 14.6644C9.32807 14.7034 10.7986 14.2344 12 13.3333"
+                                stroke="#9FF9CC" stroke-width="1.33333" stroke-linecap="round" stroke-linejoin="round" />
+                            </g>
+                            <defs>
+                              <clipPath id="clip0_24_691">
+                                <rect width="16" height="16" fill="white" />
+                              </clipPath>
+                            </defs>
+                          </svg>
                     <input type="text"
                     placeholder="Nome Completo"
                     name="nome"
