--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
             </legend>
         </fieldset>
     </form>
+    <section class="lista-participantes">
+        <h2>Participantes</h2>
+    </section>
         <table width="100%">
             <thead style="text-align: left;">
                 <tr>
