--- a/index.html
+++ b/index.html
@@ -89,19 +89,22 @@
     </form>
     <section class="lista-participantes">
         <h2>Participantes</h2>
+        <div>
+            <table width="100%">
+                <thead style="text-align: left;">
+                    <tr>
+                        <th>Participante</th>
+                        <th>Data da inscrição</th>
+                        <th>Data do check-in</th>
+                    </tr>
+                </thead>
+                <tbody>
+            
+                </tbody>
+            </table>
+
+        </div>
     </section>
-        <table width="100%">
-            <thead style="text-align: left;">
-                <tr>
-                    <th>Participante</th>
-                    <th>Data da inscrição</th>
-                    <th>Data do check-in</th>
-                </tr>
-            </thead>
-            <tbody>
-    
-            </tbody>
-        </table>
 </div>
 
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
