--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                                 stroke="#9FF9CC" stroke-width="1.33333" stroke-linecap="round" stroke-linejoin="round" />
                             </g>
                             <defs>
-                              <clipPath id="clip0_24_691">
+                              <clippath id="clip0_24_691">
                                 <rect width="16" height="16" fill="white" />
-                              </clipPath>
+                              </clippath>
                             </defs>
                           </svg>
                     <input type="text"
@@ -66,9 +66,9 @@
                                 stroke="#9FF9CC" stroke-width="1.33333" stroke-linecap="round" stroke-linejoin="round" />
                             </g>
                             <defs>
-                                 <clipPath id="clip0_24_691">
+                                 <clippath id="clip0_24_691">
                              <rect width="16" height="16" fill="white" />
-                                </clipPath>
+                                </clippath>
                             </defs>
                           </svg>
 
