--- a/index.html
+++ b/index.html
@@ -79,9 +79,7 @@
                     required
                     >
                 </div>
-                    <button>
-                        REALIZAR INSCRIÇÃO
-                    </button>
+                    <button>REALIZAR INSCRIÇÃO</button>
     
                 </div>
             </legend>
