--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 <script >
 dayjs.locale('pt-br')
 </script>
-<script type="text/javascript" src="./main.js" defer=""></script>
+<script type="text/javascript" src="./main.js" ></script>
 
 </body>
 </html>
