--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
 
     <form  onsubmit ="adicionarParticipante(event)"> <!-- quando clicar em realizar inscrição,responder e enviar informarções -->
         <fieldset>
-            <legend>
-                Inscrição
-                <div> <!-- criar uma div com classe basta escrever div.input-wrapper ( nesse caso)-->
+            <legend> Inscrição</legend>
+                            <div> <!-- criar uma div com classe basta escrever div.input-wrapper ( nesse caso)-->
                     <div class="input-wrapper">
                         <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <g clip-path="url(#clip0_24_691)">
