--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </svg>
 
   </header>
-
-    <form  onsubmit ="adicionarParticipante(event)"> <!-- quando clicar em realizar inscrição,responder e enviar informarções -->
+<!-- quando clicar em realizar inscrição,responder e enviar informarções -->
+    <form  onsubmit ="adicionarParticipante(event)"> 
         <fieldset>
             <legend> Inscrição</legend>
-                            <div> <!-- criar uma div com classe basta escrever div.input-wrapper ( nesse caso)-->
+            <div> <!-- criar uma div com classe basta escrever div.input-wrapper ( nesse caso)-->
                     <div class="input-wrapper">
                         <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <g clip-path="url(#clip0_24_691)">
