--- a/index.html
+++ b/index.html
@@ -48,11 +48,7 @@
                               </clipPath>
                             </defs>
                           </svg>
-                    <input type="text"
-                    placeholder="Nome Completo"
-                    name="nome"
-                    required
-                    >
+                    <input type="text"placeholder="Nome Completo" name="nome" required>
                     </div>
                     <div class="input-wrapper">
                         <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
