--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
                             </defs>
                           </svg>
 
- <input type="email" placeholder="Email" name="email" required
-                    >
+ <input type="email" placeholder="Email" name="email" required>
                 </div>
                     <button>REALIZAR INSCRIÇÃO</button>
     
